<resources>
    <string name="app_name">ASTU E-M Admin</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0_comments">0 Comments</string>
    <string name="change_password">Change Password?</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="name_solen_abera">Name: Solen Abera</string>
    <string name="education">Education</string>
    <string name="movie">Movie</string>
    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="educations">Educations</string>
    <string name="notification">Notification</string>
    <string name="wellcome_to_astu_event_manager">Wellcome To ASTU Event Manager</string>
    <string name="profile_setting">Profile Setting</string>

    <string-array name="post_class">
        <item>Education</item>
        <item>Movie</item>
        <item>Sport</item>
    </string-array>
</resources>
